test/typecheck/fail/modify_immutable2.sail
default Order dec
$include <prelude.sail>

val main : unit -> unit

function main() = {
    let x = 0b1;
    x : bits(1) = 0b0
}
